--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
-  backround-color: blue;
+  backround-color: #2A3257;
 }
 
+#container 
+
 #header{
-  backround-color:blue;
-  color: white;
+  backround-color: 44528D;
+  color: 15192B;
 }
